--- a/admin.html
+++ b/admin.html
@@ -92,15 +92,51 @@
                 <input type="button" class="btn btn-primary" onclick="set_preferences()" value="Search"> 
                 </div>
               </div>
+
             </form>
-          	
           		<div id="demo3"></div>
           </div>
         </div>
       </div>       
     </div>
 
+    <div>
+    <h1> Manage reservations </h1>
+    <div class="col-md-12 bg-white">
+            
+            <form class="form-custom grid-container">
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <label>Check in: </label>
+                  <input type="date" id="in2">
+                </div>
+                <div class="form-group col-md-6">
+                  <label>Check Out: </label>
+                  <input type="date" id="out2">
+                </div>
+              </div>
 
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <label>Hotel: </label>
+                  <input type="text" id="hotel2">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                <input type="button" class="btn btn-primary" onclick="check_reserv()" value="Check"> 
+                </div>
+              </div>
+            </form>          
+          	<div id="demo2"></div>
+          </div>
+
+    <button type="button" class="btn btn-primary" onclick="manage_accounts()" value="Manage acounts">
+        Manage accounts</button>
+    <button type="button" class="btn btn-primary" onclick="manage_hotels()" value="Manage hotels">
+        Manage hotels</button>
+    <button type="button" class="btn btn-primary" onclick="manage_locations()" value="Manage locations">
+        Manage locations</button>
     <!-- About section -->
     <div class="grid-container about" id="about">
       <div class="row">
@@ -139,6 +175,8 @@
   </div>
 
   <script type="text/javascript" src="./js/first_page.js"></script>
+  <script type="text/javascript" src="./js/check.js"></script>
+  <script type="text/javascript" src="./js/admin.js"></script>
 
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
