--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </div>
   </div>
 
+  <!--Custom Script -->
   <script type="text/javascript" src="./js/first_page.js"></script>
 
   <!-- Angular -->
