hotel select style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </ul>
       <ul class="navbar-nav my-2 my-md-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Book now!</a>
+          <a class="nav-link" href="#">Log in</a>
         </li>
       </ul> 
     </div>
@@ -64,26 +64,26 @@
             
             <form class="form-custom grid-container">
               <div class="row">
-                <div class="form-group col-md-6">
-                  <label>Check in: </label>
+                <div class="form-group col-md-4">
+                  <label for="in">Check in: </label>
                   <input type="date" id="in">
                 </div>
-                <div class="form-group col-md-6">
-                  <label>Check Out: </label>
+                <div class="form-group col-md-4">
+                  <label for="out">Check Out: </label>
                   <input type="date" id="out">
                 </div>
               </div>
 
               <div class="row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                   <label>No. of persons: </label><br>
                   <input type="radio" name="no" value="1"> 1 <br>
                   <input type="radio" name="no" value="2"> 2 <br>
                   <input type="radio" name="no" value="3"> 3 <br>
                   <input type="radio" name="no" value="4"> 4 <br>
                 </div>
-                <div class="form-group col-md-6">
-                  <label>Location: </label>
+                <div class="form-group col-md-4">
+                  <label for="location">Location: </label>
                   <input type="text" id="location">
                 </div>
               </div>
