--- a/choose_hotel.html
+++ b/choose_hotel.html
@@ -13,11 +13,6 @@
   <link href="./css/universal.css" rel="stylesheet">
   <link href="./css/w3-schools.css" rel="stylesheet">
 
-<style>
-a:hover {
-    background-color: yellow;
-}
-</style>
 
   <title>Choose a hotel</title>
 </head>
@@ -31,8 +26,8 @@ a:hover {
 
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Hotels</a>
@@ -53,12 +48,15 @@ a:hover {
   </nav>
 
   <div class="container">
+    <div id="hotel-container">
 
-    <h1> Take a look at the hotels by clicking "Discover the hotel!" next 
+        <h1> Take a look at the hotels by clicking "Discover the hotel!" next 
         to each one and then choose the one you prefer! </h1>
+    </div>
+  
   </div>
 
-<script type="text/javascript" src="./js/choose_hotel.js"></script>
+  <script type="text/javascript" src="./js/choose_hotel.js"></script>
 
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
