--- a/choose_hotel.html
+++ b/choose_hotel.html
@@ -16,7 +16,7 @@
 
   <title>Choose a hotel</title>
 </head>
-<body onload="load_page()">
+<body>
     <!-- NavBar -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Dream Travels</a>
