--- a/choose_hotel.html
+++ b/choose_hotel.html
@@ -48,7 +48,7 @@
   </nav>
 
   <div class="container">
-    <div id="hotel-container row">
+    <div id="hotel-container" class="row">
 
         <h1> Take a look at the hotels by clicking "Discover the hotel!" next 
         to each one and then choose the one you prefer! </h1>
