--- a/finish_reservation.html
+++ b/finish_reservation.html
@@ -44,7 +44,9 @@
   <label>No. of persons:</label>
   <p id="no_pers"></p>
   <label>Hotel:</label>
-  <p id="hotel"></p>
+  <p id="hotel"></p>  
+  <label>Total price:</label>
+  <p id="price"></p>
   <input type="button" class="btn btn-primary" onclick="submit_it()" value="Finalize!"><br>
 </form>
 <script type="text/javascript" src="./js/finish.js"></script>
