--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
     <!-- Reservation Main Window -->
     <div class="row grid-container header-container">
-      <img class="bg-img" src="./img/hotel.jpg" alt="The Hotel"> 
+      <img class="bg-img rounded" " src="./img/hotel.jpg" alt="The Hotel"> 
       
       <!-- Content of image -->
       <div class="reservation-container col-md-6 bg-white">
