--- a/choose_hotel.html
+++ b/choose_hotel.html
@@ -47,7 +47,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" style="padding-top: 50px;">
     <div id="hotel-container" class="row">
     </div>
   
