--- a/choose_hotel.html
+++ b/choose_hotel.html
@@ -47,7 +47,8 @@
     </div>
   </nav>
 
-  <div class="container" style="padding-top: 50px;">
+  <div class="container" style="padding-top: 10px;">
+    <h2>Click on the image or on the "Reserve" button to make the reservation or on the "Discover Hotel" button to find out more about the hotel</h2>
     <div id="hotel-container" class="row">
     </div>
   
