--- a/finish_reservation.html
+++ b/finish_reservation.html
@@ -16,40 +16,72 @@
   <title>Finish reservation</title>
 </head>
 <body onload="fill_in()">
-<h1> Finalize the reservation </h1>
-<form>
-  <label>First name:</label>
-  <input type="text" name="firstname"><br><br>
-  <label>Last name:</label>
-  <input type="text" name="lastname"><br><br>
-  <label>Country:</label>
-  <select name="country">
-    <option value="AS"> Austria </option>
-    <option value="BG"> Bulgaria </option>
-    <option value="RO" selected="selected"> Romania </option>
-    <option value="MD"> Moldova </option>      
-    <option value="RS"> Serbia </option>    
-    <option value="AS"> Ukraine </option>
-  </select><br><br>
-  <label>Address:</label>
-  <input type="text" name="address"><br><br>
-  <label>Phone number:</label>
-  <input type="tel" name="phone" placeholder="+40712345678"><br><br>
-  <label>Email address:</label>
-  <input type="email" name="email" placeholder="john.smith@example.com"><br><br>
-  <label>Check-in date:</label>
-  <p id="in_date"></p>
-  <label>Check-out date:</label>
-  <p id="out_date"></p>
-  <label>No. of persons:</label>
-  <p id="no_pers"></p>
-  <label>Hotel:</label>
-  <p id="hotel"></p>  
-  <label>Total price:</label>
-  <p id="price"></p>
-  <input type="button" class="btn btn-primary" onclick="submit_it()" value="Finalize!"><br>
-</form>
-<script type="text/javascript" src="./js/finish.js"></script>
+  <!-- NavBar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Dream Travels</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Hotels</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav my-2 my-md-0">
+        <li class="nav-item">
+          <a class="nav-link" href="./admin_login.html">Log in</a>
+        </li>
+      </ul> 
+    </div>
+  </nav>
+
+  <div class="container">
+    <h1> Finalize the reservation </h1>
+    <form>
+      <label>First name:</label>
+      <input type="text" name="firstname"><br><br>
+      <label>Last name:</label>
+      <input type="text" name="lastname"><br><br>
+      <label>Country:</label>
+      <select name="country">
+        <option value="AS"> Austria </option>
+        <option value="BG"> Bulgaria </option>
+        <option value="RO" selected="selected"> Romania </option>
+        <option value="MD"> Moldova </option>      
+        <option value="RS"> Serbia </option>    
+        <option value="AS"> Ukraine </option>
+      </select><br><br>
+      <label>Address:</label>
+      <input type="text" name="address"><br><br>
+      <label>Phone number:</label>
+      <input type="tel" name="phone" placeholder="+40712345678"><br><br>
+      <label>Email address:</label>
+      <input type="email" name="email" placeholder="john.smith@example.com"><br><br>
+      <label>Check-in date:</label>
+      <p id="in_date"></p>
+      <label>Check-out date:</label>
+      <p id="out_date"></p>
+      <label>No. of persons:</label>
+      <p id="no_pers"></p>
+      <label>Hotel:</label>
+      <p id="hotel"></p>  
+      <label>Total price:</label>
+      <p id="price"></p>
+      <input type="button" class="btn btn-primary" onclick="submit_it()" value="Finalize!"><br>
+    </form>
+  </div>
+  <script type="text/javascript" src="./js/finish.js"></script>
 
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
