--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </ul>
       <ul class="navbar-nav my-2 my-md-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Log in</a>
+          <a class="nav-link" href="./admin_login.html">Log in</a>
         </li>
       </ul> 
     </div>
