--- a/finish_reservation.html
+++ b/finish_reservation.html
@@ -51,15 +51,15 @@
     <form>
       <div class="row">
         <div class="form-group">
-          <label class="col-md-2 col-form-label">First name:</label>
-          <div class="col-md-4">
+          <label class="col-xl-2 col-form-label">First name:</label>
+          <div class="col-xl-4">
             <input type="text" class="form-control" name="firstname">
           </div>
         </div>
         
         <div class="form-group">
-          <label class="col-md-2 col-form-label">Last name:</label>
-          <div class="col-md-4">
+          <label class="col-xl-2 col-form-label">Last name:</label>
+          <div class="col-xl-4">
             <input type="text" class="form-control" name="lastname">
           </div>
         </div>
