--- a/finish_reservation.html
+++ b/finish_reservation.html
@@ -98,7 +98,7 @@
 
         <div class="form-group">
           <label class="col col-form-label">Email address:</label>
-          <div class="col-sm-4">
+          <div class="col">
             <input type="email" name="email" placeholder="john.smith@example.com" class="form-control">
           </div>
         </div>
@@ -107,7 +107,7 @@
       <div class="row">
         <div class="form-group">
           <label class="col col-form-label">Check-in date:</label>
-          <div class="col-sm-2">
+          <div class="col">
             <input type="text" id="in_date" readonly>
           </div>
         </div>
