--- a/finish_reservation.html
+++ b/finish_reservation.html
@@ -48,6 +48,7 @@
 
   <div class="container">
     <h1> Finalize the reservation </h1>
+    <p id="demo"></p>
     <form>
       <div class="row">
         <div class="form-group">
