--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3>About</h3>
-          <p>Our hotel is one of a kind. It is truely amazing. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          <p>With a mission to empower people to experience the world, DreamTravels invests in digital technology that helps take the friction out of travel. At DreamTravels, we connect travelers with the world`s largest selection of incredible places to stay - including everything from apartments, vacation homes, and family-run B&Bs, to 5-star luxury resorts, tree houses, and even igloos. So whether traveling for business or leisure, customers can instantly book their ideal accommodations quickly and easily with DreamTravels without booking fees and backed by our promise to price match. Through our Customer Experience Team, customers can reach us 24/7 for assistance and support anytime day or night.</p>
         </div>
 
         <div clas="col-md-6">
@@ -119,9 +119,9 @@
     <div class="contact" id="contact">
       <h2>Contact</h2>
       <p>If you have any questions, do not hesitate to ask them.</p>
-      <p>Chicago, US</p>
-      <p>Phone: +00 151515</p>
-      <p>Email: mail@mail.com</p>
+      <p>Bucharest, RO</p>
+      <p>Phone: +40723 567 948</p>
+      <p>Email: contact@dreamtravels.com</p>
 
       <form >
         <div class="form-group">
