--- a/finish_reservation.html
+++ b/finish_reservation.html
@@ -109,21 +109,21 @@
         <div class="form-group">
           <label class="col col-form-label">Check-in date:</label>
           <div class="col">
-            <input type="text" id="in_date" readonly>
+            <div id="in_date"></div>
           </div>
         </div>
 
         <div class="form-group">
           <label class="col col-form-label">Check-out date:</label>
           <div class="col">
-            <input type="text" id="out_date" readonly>
+            <div id="out_date"></div>
           </div>
         </div>
         
         <div class="form-group">
           <label class="col col-form-label">No. of persons:</label>
           <div class="col">
-            <input type="text" id="no_pers" readonly>
+            <div id="no_pers"></div>
           </div>
         </div>
       </div>
@@ -132,14 +132,14 @@
         <div class="form-group">
           <label class="col col-form-label">Hotel:</label>
           <div class="col">
-            <input type="text" id="hotel" readonly>  
+            <div id="hotel"></div> 
           </div>
         </div>
         
         <div class="form-group">
           <label class="col col-form-label">Total price:</label>
           <div class="col">
-            <input type="text" id="price" readonly>
+            <div id="price"></div>
           </div>
         </div>
       </div>
@@ -157,3 +157,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html> 
+
