--- a/admin_login.html
+++ b/admin_login.html
@@ -64,7 +64,7 @@
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin">
         <span id="reauth-email" class="reauth-email"></span>
-        <input type="email" id="username" name="username" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Email address" required autofocus>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit" onclick="submit_it()">Sign in</button>
     </form><!-- /form -->
