--- a/admin_login.html
+++ b/admin_login.html
@@ -62,7 +62,7 @@
 <div class="card card-container">
     <img id="profile-img" class="profile-img-card" src="./img/avatar_2x.png" />
     <p id="profile-name" class="profile-name-card"></p>
-    <form class="form-signin">
+    <form class="form-signin" novalidate="novalidate">
         <span id="reauth-email" class="reauth-email"></span>
         <input type="email" id="username" name="username" class="form-control" placeholder="Email address" required autofocus>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
