--- a/admin_login.html
+++ b/admin_login.html
@@ -62,9 +62,9 @@
 <div class="card card-container">
     <img id="profile-img" class="profile-img-card" src="./img/avatar_2x.png" />
     <p id="profile-name" class="profile-name-card"></p>
-    <form class="form-signin was-validated">
+    <form class="form-signin">
         <span id="reauth-email" class="reauth-email"></span>
-        <input type="email" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Email address" required autofocus>
         <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit" onclick="submit_it()">Sign in</button>
     </form><!-- /form -->
