--- a/hotels.html
+++ b/hotels.html
@@ -16,8 +16,39 @@
   <title>Hotels</title>
 </head>
 <body onload="print()">
+    <!-- NavBar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Dream Travels</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="./admin.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Hotels</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav my-2 my-md-0">
+        <li class="nav-item">
+          <a class="nav-link" href="./admin_login.html">Log in</a>
+        </li>
+      </ul> 
+    </div>
+  </nav>
+  <div class="container">
 <p id="demo"></p>
   <button type="button" class="btn btn-primary" onclick="add_hotel()">Add hotel</button>
+</div>
 
   <script type="text/javascript" src="./js/hotel_page.js"></script>
 
