--- a/add_hotel.html
+++ b/add_hotel.html
@@ -47,37 +47,73 @@
   </nav>
   <div class="container">
 <p id="demo"></p>
-<form>
-<label>Name:</label>
-  <input type="text" name="name"><br><br>
-  <label>Location:</label>
-  <select name="location"></select>
-  <button type="button" class="btn btn-primary" 
-        onclick="manage_loc()" value="Manage locations">Manage locations</button>
-  <button type="button" class="btn btn-primary" 
-         onclick="window.location.reload()" value="Reload">Reload Page</button><br><br>
-  <label>Phone number:</label>
-  <input type="tel" name="phone"><br><br>
-  <label>Email address:</label>
-  <input type="email" name="email"><br><br>
-  <label>No. rooms of 1:</label>
-  <input type="text" name="no_rooms1" value="0">
-  <label>Price:</label>
-  <input type="text" name="price1" value="0"><br><br>
-  <label>No. rooms of 2:</label>
-  <input type="text" name="no_rooms2" value="0">
-  <label>Price:</label>
-  <input type="text" name="price2" value="0"><br><br>
-  <label>No. rooms of 3:</label>
-  <input type="text" name="no_rooms3" value="0">
-  <label>Price:</label>
-  <input type="text" name="price3" value="0"><br><br>
-  <label>No. rooms of 4:</label>
-  <input type="text" name="no_rooms4" value="0">
-  <label>Price:</label>
-  <input type="text" name="price4" value="0"><br><br>
-  <input type="button" class="btn btn-primary" onclick="add_it()" value="Add hotel"><br>
-</form>
+  <form>
+    <div class="form-group">
+    <label>Name:</label>
+    <input  class="form-control" type="text" name="name">
+    </div>
+    
+    <div class="form-group">
+    <label>Location:</label>
+    <select name="location" class="form-control"></select>
+    <button type="button" class="btn btn-primary" 
+          onclick="manage_loc()" value="Manage locations">Manage locations</button>
+    <button type="button" class="btn btn-primary" 
+           onclick="window.location.reload()" value="Reload">Reload Page</button>
+    </div>
+
+    <div class="form-group">
+    <label>Phone number:</label>
+    <input type="tel" name="phone" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>Email address:</label>
+    <input type="email" name="email" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>No. rooms of 1:</label>
+    <input type="text" name="no_rooms1" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>Price:</label>
+    <input type="text" name="price1" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>No. rooms of 2:</label>
+    <input type="text" name="no_rooms2" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>Price:</label>
+    <input type="text" name="price2" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>No. rooms of 3:</label>
+    <input type="text" name="no_rooms3" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>Price:</label>
+    <input type="text" name="price3" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>No. rooms of 4:</label>
+    <input type="text" name="no_rooms4" value="0" class="form-control">
+    </div>
+
+    <div class="form-group">
+    <label>Price:</label>
+    <input type="text" name="price4" value="0" class="form-control">
+    </div>
+
+    <input type="button" class="btn btn-primary" onclick="add_it()" value="Add hotel">
+  </form>
 </div>
 
   <script type="text/javascript" src="./js/change_hotel.js"></script>
