--- a/add_user.html
+++ b/add_user.html
@@ -49,21 +49,42 @@
 <div class="container">
 <p id="demo"></p>
 <form>
-<label>First name:</label>
-  <input type="text" name="firstname"><br><br>
+  <div class="form-group">
+  <label>First name:</label>
+  <input type="text" name="firstname" class="form-control"><br><br>
+  </div>
+
+  <div class="form-group">
   <label>Last name:</label>
-  <input type="text" name="lastname"><br><br>
+  <input type="text" name="lastname" class="form-control"><br><br>
+  </div>
+
+  <div class="form-group">
   <label>User name:</label>
-  <input type="text" name="username"><br><br>
+  <input type="text" name="username" class="form-control"><br><br>
+  </div>
+
+  <div class="form-group">
   <label>Password:</label>
-  <input type="text" name="password"><br><br>
+  <input type="text" name="password" class="form-control"><br><br>
+  </div>
+
+  <div class="form-group">
   <label>Email address:</label>
-  <input type="email" name="email"><br><br>
+  <input type="email" name="email" class="form-control"><br><br>
+  </div>
+
+  <div class="form-group">
   <label>Phone number:</label>
-  <input type="tel" name="phone"><br><br>
+  <input type="tel" name="phone" class="form-control"><br><br>
+  </div>
+
+  <div class="form-group">
   <label>Type:</label><br>
         <input type="radio" name="type" value="1"> Administrator <br>
         <input type="radio" name="type" value="2"> Receptionist <br><br>
+  </div>
+
   <input type="button" class="btn btn-primary" onclick="add_it()" value="Add user"><br>
 </form>
 </div>
