--- a/add_user.html
+++ b/add_user.html
@@ -51,41 +51,41 @@
 <form>
   <div class="form-group">
   <label>First name:</label>
-  <input type="text" name="firstname" class="form-control"><br><br>
+  <input type="text" name="firstname" class="form-control">
   </div>
 
   <div class="form-group">
   <label>Last name:</label>
-  <input type="text" name="lastname" class="form-control"><br><br>
+  <input type="text" name="lastname" class="form-control">
   </div>
 
   <div class="form-group">
   <label>User name:</label>
-  <input type="text" name="username" class="form-control"><br><br>
+  <input type="text" name="username" class="form-control">
   </div>
 
   <div class="form-group">
   <label>Password:</label>
-  <input type="text" name="password" class="form-control"><br><br>
+  <input type="text" name="password" class="form-control">
   </div>
 
   <div class="form-group">
   <label>Email address:</label>
-  <input type="email" name="email" class="form-control"><br><br>
+  <input type="email" name="email" class="form-control">
   </div>
 
   <div class="form-group">
   <label>Phone number:</label>
-  <input type="tel" name="phone" class="form-control"><br><br>
+  <input type="tel" name="phone" class="form-control">
   </div>
 
   <div class="form-group">
   <label>Type:</label><br>
-        <input type="radio" name="type" value="1"> Administrator <br>
-        <input type="radio" name="type" value="2"> Receptionist <br><br>
+        <input type="radio" name="type" value="1" class="form-control"> Administrator 
+        <input type="radio" name="type" value="2" class="form-control"> Receptionist 
   </div>
 
-  <input type="button" class="btn btn-primary" onclick="add_it()" value="Add user"><br>
+  <input type="button" class="btn btn-primary" onclick="add_it()" value="Add user">
 </form>
 </div>
   <script type="text/javascript" src="./js/change_user.js"></script>
