--- a/add_user.html
+++ b/add_user.html
@@ -81,8 +81,8 @@
 
   <div class="form-group">
   <label>Type:</label><br>
-        <input type="radio" name="type" value="1" class="form-control"> Administrator 
-        <input type="radio" name="type" value="2" class="form-control"> Receptionist 
+        <input type="radio" name="type" value="1"> Administrator <br>
+        <input type="radio" name="type" value="2"> Receptionist 
   </div>
 
   <input type="button" class="btn btn-primary" onclick="add_it()" value="Add user">
