--- a/hotels.html
+++ b/hotels.html
@@ -46,8 +46,24 @@
     </div>
   </nav>
   <div class="container">
-<p id="demo"></p>
+  <p id="demo"></p>
   <button type="button" class="btn btn-primary" onclick="add_hotel()">Add hotel</button>
+
+  <table class="table table-striped" id="main_table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Hotel Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Location</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">No. Rooms</th>
+        <th scope="col">Options</th>
+      </tr>
+    </thead>
+    <tbody id="table_body">
+    </tbody>
+  </table>
 </div>
 
   <script type="text/javascript" src="./js/hotel_page.js"></script>
