--- a/users.html
+++ b/users.html
@@ -49,6 +49,23 @@
 <p id="demo"></p>
 
   <button type="button" class="btn btn-primary" onclick="add_user()">Add user</button>
+
+    <table class="table table-striped" id="main_table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">User Id</th>
+        <th scope="col">Username</th>
+        <th scope="col">Firstname</th>
+        <th scope="col">Lastname</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Type</th>
+        <th scope="col">Options</th>
+      </tr>
+    </thead>
+    <tbody id="table_body">
+    </tbody>
+  </table>
 </div>
 
   <script type="text/javascript" src="./js/user_page.js"></script>
