--- a/locations.html
+++ b/locations.html
@@ -47,6 +47,21 @@
   </nav>
   <div class="container">
 <p id="demo"></p>
+    <table class="table table-striped" id="main_table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Location Id</th>
+        <th scope="col">Town</th>
+        <th scope="col">County</th>
+        <th scope="col">Country</th>
+        <th scope="col">Street</th>
+        <th scope="col">No.</th>
+        <th scope="col">Options</th>
+      </tr>
+    </thead>
+    <tbody id="table_body">
+    </tbody>
+  </table>
 
 
   <button type="button" class="btn btn-primary" onclick="add_loc()">Add location</button>
