--- a/reservations.html
+++ b/reservations.html
@@ -47,6 +47,23 @@
   </nav>
   <div class="container">
 <p id="demo"></p>
+
+    <table class="table table-striped" id="main_table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Room Id</th>
+        <th scope="col">Customer name</th>
+        <th scope="col">Reservation ID</th>
+        <th scope="col">Check-in Data</th>
+        <th scope="col">Check-out Date</th>
+        <th scope="col">Price</th>
+        <th scope="col">Options</th>
+      </tr>
+    </thead>
+    <tbody id="table_body">
+    </tbody>
+  </table>
+
 </div>
 
 <script type="text/javascript" src="./js/print_reserv.js"></script>
